@@ -25,7 +25,19 @@ else:
     text_type = unicode
     binary_type = str
 
-    MAXSIZE = sys.maxint
+    # It's possible to have sizeof(long) != sizeof(Py_ssize_t).
+    class X(object):
+        def __len__(self):
+            return 1 << 31
+    try:
+        len(X())
+    except OverflowError:
+        # 32-bit
+        MAXSIZE = int((1 << 31) - 1)
+    else:
+        # 64-bit
+        MAXSIZE = int((1 << 63) - 1)
+    del X
 
 
 def _add_doc(func, doc):
